[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["frohlichramon01 <frohlichramon01@gmail.com>"]
readme = "README.md"
packages = [{ include = "bookstore" }]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"
djangorestframework = "^3.15.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "3.2.2"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
